передалана инкапсуляция